# lidar_visual_reconstructor

./: CMakeLists.txt  README.md  package.xml
CAN_protocol_test/: main.cpp
CAN_protocol_test/ver1.5_receiver/: ver1.5_receiver.ino
CAN_protocol_test/ver1.5_sender/: ver1.5_sender.ino
include/: camera.hpp  communicator.h  custom_memory.hpp  custom_struct.hpp  epipolar_klt.h  feature_tracker.h  frame.hpp  hcegcs.h  image_processing.hpp  lidar_pcl.hpp  lidar_visual_reconstructor.h  lidar_visual_reconstructor.hpp  point_database.hpp  timer.hpp
include/can/: can_communicator.hpp  can_message.hpp
include/cdt/: adjacent_map.hpp  constrained_delaunay.hpp  faststack.hpp  geometry_struct.hpp
include/util/: image_processing.hpp  sophus_lie.hpp  timer.hpp
launch/: CAN_TEST.launch  profiling.launch
msg/: ControlInputsStamped.msg  LidarDataStamped.msg  packetsToExcavator.msg
params/: camera_intrinsics.yaml  sensor_extrinsics.yaml
src/: camera.cpp  communicator.cpp  epipolar_klt.cpp  feature_tracker.cpp  frame.cpp  hcegcs.cpp  image_procesing.cpp  lidar_visual_reconstructor.cpp  main.cpp  main_3drecon.cpp  main_communicator.cpp  main_gcs.cpp  main_reconstruction.cpp  main_vis_recon.cpp  timer.cpp
src/can/: can_communicator.cpp
src/cdt/: adjacent_map.cpp  constrained_delaunay.cpp
src/util/: image_procesing.cpp  sophus_lie.cpp  timer.cpp
srv/: LidarImageDataStamped.srv  ProfilePointsStamped.srv  ProfilePolynomialStamped.srv  lidarImageDataStamped.srv  profilePointsStamped.srv  profilePolynomialStamped.srv  relativeLidarPoseStamped.srv
test_data/up_20/: boom_lidar.pcd  cabin_lidar.pcd
